--- a/fish/fish.html
+++ b/fish/fish.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <head>
     <title>Fishing Enterprises</title>
-    <link rel="stylesheet" href="/fish/css/main.css" type="text/css">
-    <link id="page_style" rel="stylesheet" href="/fish/css/light.css" type="text/css"/>
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link id="page_style" rel="stylesheet" href="css/light.css" type="text/css"/>
+    <!--客服 开始-->
+<script src="//likexia.gitee.io/game/js/jquery.min.js"></script>
+<link rel="stylesheet" href="//likexia.gitee.io/game/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//likexia.gitee.io/game/js/kf.js"></script>
+<!-- 客服 结束 -->
 </head>
 <body>
     <div class="container">
