--- a/fish/fish.html
+++ b/fish/fish.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Fishing Enterprises</title>
+    <title>钓鱼公司 - Fishing Enterprises</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <link id="page_style" rel="stylesheet" href="css/light.css" type="text/css"/>
@@ -22,6 +22,7 @@
         </div>
         <div id="right"></div>
     </div>
+    <script src="javascript/zh.js"></script>
     <script src="javascript/main.js"></script>
     <script src="javascript/lights.js"></script>
     <script src="javascript/messenger.js"></script>
@@ -63,10 +64,11 @@
 </body>
 <footer>
     <div class="bottom">
-        - <a id="lights" class="link" onclick="lights.toggle()">lights off</a> |
-        <a class="link" onclick="main.show_settings()">settings</a> |
-        <a class="link" onclick="main.show_about()">about</a> |
-        <a class="link" onclick="main.show_support()">support me</a> |
-        <a class="link" href="https://github.com/mrsperry/mrsperry.github.io/tree/master/fish" target="_blank">github</a> -
+        - <a id="lights" class="link" onclick="lights.toggle()">关灯</a> |
+        <a class="link" onclick="main.show_settings()">设置</a> |
+        <a class="link" onclick="main.show_about()">关于</a> |
+        <a class="link" onclick="main.show_support()">报错</a> |
+<!--        <a class="link" href="https://github.com/mrsperry/mrsperry.github.io/tree/master/fish" target="_blank">github</a>-->
+         -
     </div>
 </footer>
