--- a/fish/fish.html
+++ b/fish/fish.html
@@ -4,11 +4,23 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <link id="page_style" rel="stylesheet" href="css/light.css" type="text/css"/>
-    <!--客服 开始-->
-<script src="//likexia.gitee.io/game/js/jquery.min.js"></script>
-<link rel="stylesheet" href="//likexia.gitee.io/game/css/kf.css" type="text/css" media="screen" charset="utf-8">
-<script src="//likexia.gitee.io/game/js/kf.js"></script>
+<!--客服 开始-->
+<script src="//g8hh.com/static/js/jquery.min.js"></script>
+<link rel="stylesheet" href="//g8hh.com/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//g8hh.com/static/js/kf.js"></script>
 <!-- 客服 结束 -->
+<!--站长统计-->
+    <div style="display: none">
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?dbb7ff142f4d4b68546c93b9cd6e9328";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+    </div>
 </head>
 <body>
     <div class="container">
