--- a/fish/index.html
+++ b/fish/index.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <head>
     <title>钓鱼公司 - Fishing Enterprises</title>
-    <meta charset="utf-8" />
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <link id="page_style" rel="stylesheet" href="css/light.css" type="text/css"/>
-<!--客服 开始-->
-<script src="//g8hh.com/static/js/jquery.min.js"></script>
-<link rel="stylesheet" href="//g8hh.com/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
-<script src="//g8hh.com/static/js/kf.js"></script>
-<!-- 客服 结束 -->
-<!--站长统计-->
+    <!--客服 开始-->
+    <script src="//g8hh.com/static/js/jquery.min.js"></script>
+    <link rel="stylesheet" href="//g8hh.com/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
+    <script src="//g8hh.com/static/js/kf.js"></script>
+    <!-- 客服 结束 -->
+    <!--站长统计-->
     <div style="display: none">
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?dbb7ff142f4d4b68546c93b9cd6e9328";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-    </div>
+        <script>
+        var _hmt = _hmt || [];
+        (function() {
+          var hm = document.createElement("script");
+          hm.src = "https://hm.baidu.com/hm.js?dbb7ff142f4d4b68546c93b9cd6e9328";
+          var s = document.getElementsByTagName("script")[0]; 
+          s.parentNode.insertBefore(hm, s);
+        })();
+        </script>
+            </div>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130264842-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-130264842-2');
+    </script> -->
 </head>
 <body>
+    <script src="chs.js"></script>
+    <script src="core.js"></script>
     <div class="container">
         <div class="left">
             <div class="container">
@@ -34,7 +44,6 @@ var _hmt = _hmt || [];
         </div>
         <div id="right"></div>
     </div>
-    <script src="javascript/zh.js"></script>
     <script src="javascript/main.js"></script>
     <script src="javascript/lights.js"></script>
     <script src="javascript/messenger.js"></script>
@@ -76,11 +85,10 @@ var _hmt = _hmt || [];
 </body>
 <footer>
     <div class="bottom">
-        - <a id="lights" class="link" onclick="lights.toggle()">关灯</a> |
-        <a class="link" onclick="main.show_settings()">设置</a> |
-        <a class="link" onclick="main.show_about()">关于</a> |
-        <a class="link" onclick="main.show_support()">报错</a> |
-<!--        <a class="link" href="https://github.com/mrsperry/mrsperry.github.io/tree/master/fish" target="_blank">github</a>-->
-         -
+        - <a id="lights" class="link" onclick="lights.toggle()">lights off</a> |
+        <a class="link" onclick="main.show_settings()">settings</a> |
+        <a class="link" onclick="main.show_about()">about</a> |
+        <a class="link" onclick="main.show_support()">support me</a> |
+        <a class="link" href="https://github.com/mrsperry/fishing-enterprises/" target="_blank">github</a> -
     </div>
 </footer>
