--- a/fish/fish.html
+++ b/fish/fish.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <link id="page_style" rel="stylesheet" href="css/light.css" type="text/css"/>
     <!--客服 开始-->
-    <script src="//g8hh.com/static/js/jquery.min.js"></script>
+    <script src="jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="//g8hh.com/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
     <script src="//g8hh.com/static/js/kf.js"></script>
     <!-- 客服 结束 -->
