--- a/fish/fish.html
+++ b/fish/fish.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>钓鱼公司 - Fishing Enterprises</title>
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <link id="page_style" rel="stylesheet" href="css/light.css" type="text/css"/>
     <!--客服 开始-->
